--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,8 @@
 FROM node:18-alpine as build
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
+# Use legacy peer deps to avoid ERESOLVE in the build container
+RUN npm install --legacy-peer-deps
 COPY . .
 RUN npm run build
 
